--- a/rest-api-project/requirements.txt
+++ b/rest-api-project/requirements.txt
@@ -1,5 +1,7 @@
-flask
-flask-sqlalchemy
-flask-smorest
-python-dotenv
+Flask-JWT-Extended
+Flask-Smorest
+Flask-SQLAlchemy
+passlib
 marshmallow
+python-dotenv
+gunicorn
